Added SwashStatistics_ChartingControl library as Nuget package

--- a/TruckParkingProject/TruckParkingProject.csproj
+++ b/TruckParkingProject/TruckParkingProject.csproj
@@ -34,8 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SwashStatistics_ChartingControl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\SwashStatistics_ChartingControl.dll</HintPath>
+      <HintPath>..\packages\SwashStatistics_ChartingControl.1.0.0\lib\net45\SwashStatistics_ChartingControl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -98,6 +97,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
